[build-system]
requires = ["setuptools", "pandas", "matplotlib", "plotly", "oemof.solph"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["oemof.visio"]
[project]
name = "oemof.visio"
authors = [
  { name="oemof developing group", email="info@oemof.org"},
]
description = "Postprocessing and visualisation tools for oemof-solph models"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "pandas",
    "plotly"
]
dynamic = ["version"]
license = "MIT"


[project.optional-dependencies]
network = [
    "graphviz",
    "oemof.network",
]

[project.urls]
Homepage = "https://github.com/oemof/oemof-visio"
Issues = "https://github.com/oemof/oemof-visio/issues"
