[build-system]
requires = ["flit_core >=3.2"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "LICENSE",
    "README.rst",
    "docs/",
    "src/",
]
exclude = ["docs/_build"]

[project]
name = "oemof.visio"
authors = [
  { name="oemof developing group", email="contact@oemof.org"},
]
description = "A package that contains postprocessing and visualisation tools for oemof-solph models"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
readme = "README.rst"
dependencies = [
    "matplotlib",
    "pandas",
    "plotly"
]
dynamic = ["version"]
license = "MIT"

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}


[project.optional-dependencies]
network = [
    "graphviz",
    "oemof.network",
]

[project.urls]
Homepage = "https://github.com/oemof/oemof-visio"
Issues = "https://github.com/oemof/oemof-visio/issues"
